# oka-flow

./: cabal.project  oka-metadata.cabal  shell.nix
.github/workflows/: ci.yml
OKA/: Metadata.hs
OKA/Metadata/: Encoding.hs  Meta.hs  Util.hs
hask-lib/oka-flow/: oka-flow.cabal
hask-lib/oka-flow/OKA/: Flow.hs
hask-lib/oka-flow/OKA/Flow/: Graph.hs  Run.hs  Tools.hs  Types.hs
hask-lib/oka-flow/exe/: Main.hs
hask-lib/oka-flow/tests/TM/: Flow.hs
oka-flow/: oka-flow.cabal
oka-flow/OKA/: Flow.hs
oka-flow/OKA/Flow/: Eff.hs  Graph.hs  Parser.hs  Resources.hs  Run.hs  Std.hs  Tools.hs  Types.hs  Util.hs
oka-flow/OKA/Flow/Core/: Flow.hs  Graph.hs  Resources.hs  Result.hs  Run.hs  S.hs  Types.hs
oka-flow/OKA/Flow/Eff/: Cache.hs
oka-flow/OKA/Flow/Internal/: Parser.hs  Util.hs
oka-flow/exe/: Main.hs
oka-flow/tests/: Main.hs
oka-flow/tests/TM/: Flow.hs  Serialization.hs
oka-metadata/: oka-metadata.cabal
oka-metadata/OKA/: Metadata.hs
oka-metadata/OKA/Metadata/: Encoding.hs  Meta.hs
oka-metadata/tests/TM/: Meta.hs
python/: pyproject.toml
python/okaflow/: mypy.ini  pyproject.toml
python/okaflow/okaflow/: __init__.py  args.py  encoding.py  metadata.py
python/okaflow/test/: test_S.py
python/src/okaflow/: __init__.py  args.py
tests/: Main.hs
tests/TM/: Meta.hs
