Cabal-Version:  2.2
Name:           oka-metadata
Version:        0.1
Synopsis:       Metadata for data analysis


License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:      -Wall -O2
  Default-Language: Haskell2010
  --
  Build-Depends:    base                >=4.12 && <5
                  , aeson               >=2
                  , histogram-fill
                  , scientific
                  , transformers
                  , text
                  , containers          >=0.5
                  , vector
                  , yaml
  Exposed-modules:
        OKA.Metadata

-- Test-suite oka-metadata-tests
--   type:             exitcode-stdio-1.0
--   Default-Language: Haskell2010
--   ghc-options:      -Wall
--   Build-Depends:    base
--                   , oka-extra
--                   , oka-db-classes
--                   , bytestring
--                   , vector
--                   , fixed-vector
--                   , serialise
--                   , math-functions
--                     --
--                   , tasty
--                   , tasty-quickcheck
--                   , tasty-hunit
--   hs-source-dirs: tests
--   main-is:        Main.hs
--   other-modules:  TM.DB
--                   TM.Parser
--                   TM.Serialization
