Cabal-Version:  3.0
Name:           oka-flow
Version:        0.1
Synopsis:       Simple dataflow programming framework
Description:
  This is attempt to create simple dataflow framework for use in data
  analysis. It should be simple to use 

License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Build-Type:     Simple

common extensions
  Default-extensions: NoPolyKinds
                      --
                    , NoFieldSelectors
                    , OverloadedRecordDot
                    , DuplicateRecordFields
                      --
                    , DerivingVia
                    , LambdaCase
                    , TupleSections
                    , ViewPatterns
                    , MultiWayIf
                    , NumericUnderscores

Library
  import:           extensions
  Ghc-options:      -Wall -O2
  Default-Language: GHC2021
  --
  Build-Depends:    base                 >=4.12 && <5
                  , oka-metadata
                    --
                  , aeson                >=2
                  , async                >=2
                  , base16-bytestring    >=1
                  , bytestring
                  , containers
                  , cryptohash-sha1      >=0.11
                  , directory
                  , filepath
                  , lens                 >=5
                  , mtl
                  , process
                  , stm                  >=2.4
                  , temporary            >=1.3
                  , text                 >=2
                  , time
                  , transformers
                  , typed-process        >=0.2.12
                  , unix
                  , unordered-containers >=0.2
                  , vector               >=0.13
                  , effectful-core       >=2.3
                  , yaml
  Exposed-modules:
        OKA.Flow
        OKA.Flow.Graph
        OKA.Flow.Run
        OKA.Flow.Resources
        OKA.Flow.Types
        OKA.Flow.Eff
        OKA.Flow.Parser
        OKA.Flow.Tools
        OKA.Flow.Std

executable oka-flow
  import:           extensions
  Ghc-options:      -Wall -Wno-incomplete-uni-patterns
  Default-Language: GHC2021
  --
  hs-source-dirs:   exe
  main-is:          Main.hs
  build-depends:    base
                  , oka-flow
                  , aeson
                  , filepath
                  , directory
                  , containers
                  , transformers
                  , optparse-applicative >= 0.18

Test-suite oka-flow-tests
  import:           extensions
  type:             exitcode-stdio-1.0
  Default-Language: GHC2021
  ghc-options:      -Wall -Wno-incomplete-uni-patterns
  Build-Depends:    base
                  , oka-flow
                  , oka-metadata
                    --
                  , aeson
                  , lens
                  , containers
                  , directory
                  , temporary  >=1
                  , transformers
                  , filepath
                  , effectful-core
                  , unordered-containers
                  , lens
                  , text
                    --
                  , tasty
                  , tasty-quickcheck
                  , tasty-hunit
  hs-source-dirs: tests
  main-is:        Main.hs
  other-modules:  TM.Flow
