[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "okaflow"
version = "0.1.0"
authors = [
  { name="Alexey Khudyakov", email="alexey.skladnoy@gmail.com" },
]
description = "Supporint code for oka-flow "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

#[project.urls]
#Homepage =
#Issues =