Cabal-Version:  2.2
Name:           oka-flow
Version:        0.1
Synopsis:       Simple dataflow programming framework
Description:
  This is attempt to create simple dataflow framework for use in data
  analysis. It should be simple to use 

License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Build-Type:     Simple

Library
  Ghc-options:      -Wall -O2
  Default-Language: Haskell2010
  --
  Build-Depends:    base                 >=4.12 && <5
                  , oka-metadata
                    --
                  , lens                 >=5
                  , filepath
                  , containers
                  , stm                  >=2.4
                  , async                >=2
                  , mtl
                  , transformers
                  , aeson                >=2
                  , directory
                  , bytestring
                  , operational          >=0.2.4
                  , cryptohash-sha1      >=0.11
                  , base16-bytestring    >=1
                  , vector               >=0.13
                  , unordered-containers >=0.2
                    --
                  , typed-process        >=0.2
                  , process
                  , unix
                  , generic-lens         >=2.2
                  , temporary            >=1.3
  Exposed-modules:
        OKA.Flow
        OKA.Flow.Graph
        OKA.Flow.Run
        OKA.Flow.Types
        OKA.Flow.Tools

Test-suite oka-flow-tests
  type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  ghc-options:      -Wall
  Build-Depends:    base
                  , oka-flow
                  , oka-metadata
                    --
                  , aeson
                  , containers
                  , directory
                  , temporary  >=1
                  , transformers
                  , filepath
                  , operational
                  , unordered-containers
                  , lens
                  , text
                    --
                  , tasty
                  , tasty-quickcheck
                  , tasty-hunit
  hs-source-dirs: tests
  main-is:        Main.hs
  other-modules:  TM.Flow
